test/core/errors/indexed_offsets_error/zs/multiple_index_operators_error.zs
package multiple_index_operators_error;

struct Holder
{
    uint32 offsets[];
};

struct MultipleIndexOperatorsError
{
    Holder holders[];
holders[@index].offsets[@index]:
    string fields[];
};
